k8s/front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: shoppulse
  labels:
    app: front-end
    app.kubernetes.io/name: front-end
    app.kubernetes.io/part-of: shoppulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: front-end
      containers:
        - name: front-end
          image: shoppulseskacr01.azurecr.io/front-end:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
