k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: shoppulse
  labels:
    app: worker
    app.kubernetes.io/name: worker
    app.kubernetes.io/part-of: shoppulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: worker
      containers:
        - name: worker
          image: shoppulseskacr01.azurecr.io/worker:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: health
              containerPort: 8001
          readinessProbe:
            httpGet:
              path: /healthz
              port: health
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: health
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
